--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,22 +1,28 @@
-name: Sincronizar con GB Soluciones Digitales
+name: Mirroring a GB Soluciones Digitales
 
 on:
   push:
     branches:
-      - main 
+      - main
+  workflow_dispatch:
 
 jobs:
-  mirror_to_org:
+  mirror:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout del código
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0 
 
-      - name: Mirror a la Organización
-        uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url: https://github.com/GB-Soluciones-Digitales/Ecommerce_Camel_Shop_Frontend.git
-          user_name: Brian13b
-          user_password: ${{ secrets.ORG_PAT }}
+      - name: Configurar y Empujar al Espejo
+        env:
+          OP_TOKEN: ${{ secrets.ORG_PAT }}
+        run: |
+          # 1. Limpiamos cualquier rastro de remotos previos y configuramos el nuevo
+          # Usamos x-access-token que es el método más seguro
+          git remote add mirror https://x-access-token:${OP_TOKEN}@github.com/GB-Soluciones-Digitales/Ecommerce_Camel_Shop_Frontend.git
+          
+          # 2. Empujamos todo (ramas, tags y commits)
+          # El flag --mirror es clave para que sean idénticos
+          git push --mirror mirror
